# durakifa

./: Cargo.toml  README.md
.cargo/: config.toml
durakifa-client/: Cargo.toml
durakifa-client/src/: lib.rs  main.rs
durakifa-client/src/plugins/: dimensions.rs  load.rs  lobby.rs  menu.rs  mod.rs  mouse.rs  register.rs  room.rs  vkeyboard.rs
durakifa-protocol/: Cargo.toml
durakifa-protocol/src/: lib.rs  protocol.rs
durakifa-protocol/src/protocol/components/: mod.rs  name.rs  owner.rs  player.rs  room.rs  user.rs
durakifa-protocol/src/protocol/messages/: add.rs  auth.rs  join.rs  leave.rs  mod.rs  own.rs  register.rs
durakifa-protocol/src/protocol/messages/lobby/: authorize.rs  create_room.rs  join_room.rs  leave_room.rs  mod.rs  own_user.rs  register_user.rs
durakifa-server/: Cargo.toml
durakifa-server/src/: main.rs
durakifa-server/src/logic/: game.rs  lobby.rs  mod.rs
