[package]
name = "durakifa-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",
] }
bevy_asset_loader = { version = "0.12.1", features = ["2d"] }
#bevy_kira_audio = "0.12.0"
durakifa-protocol = { path = "../durakifa-protocol" }
naia-bevy-client = { git = "https://github.com/FF-AntiK/naia.git", branch = "ipv6" }
obfstr = "0.4.1"
wasm-bindgen = "0.2.83"
