[package]
name = "durakifa-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",
] }
bevy_asset_loader = { version = "0.14.1", features = ["2d"] }
durakifa-protocol = { path = "../durakifa-protocol" }
naia-bevy-client = "0.15.0"
obfstr = "0.4.1"
wasm-bindgen = "0.2.84"
