[package]
name = "durakifa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { version = "0.9.1", default-features = false }
bevy_core = { version = "0.9.1", default-features = false }
bevy_ecs = { version = "0.9.1", default-features = false }
bevy_log = { version = "0.9.1", default-features = false }
durakifa-protocol = { path = "../durakifa-protocol" }
naia-bevy-server = "0.15.0"
obfstr = "0.4.1"
